docs/how-to/webhook/httpsonly/good-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/insecure-termination: redirect
  name: test-ingress
spec:
  ingressClassName: citrix-ingress
  rules:
  - http:
      paths:
      - backend:
          service:
            name: test
            port:
              number: 80
        path: /testpath
        pathType: Prefix
  tls:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: citrix-ingress
spec:
  controller: citrix.com/ingress-controller
---
