docs/how-to/webhook/httpsonly/ingress-secure.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: citrix-secure
  annotations:
    ingress.citrix.com/insecure-termination: redirect
    kubernetes.io/ingress.class: citrix-ingress
spec:
  tls:
  - secretName:
  rules:
  - http:
      paths:
      - path: /testpath
        backend:
          serviceName: test
          servicePort: 80
